# smpl_vertex_region_selector

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-gui.txt  requirements.txt
.github/workflows/: ci.yml
assets/: README.md
assets/demo_reference/: README.md
assets/demo_reference/public/: alignment_report.json  smpl_27554_to_surface_map.npz  tri_view_manifest.json  vertex_template_points.csv
assets/demo_reference/public/tri_views/: back.vertex_id_map.npz  front.vertex_id_map.npz  left.vertex_id_map.npz  right.vertex_id_map.npz
docs/: alignment.md  assets.md  cse_vertex_map.md  desktop_app.md  discoverability.md  legal_assets.md  public_examples.md  region_selection_workflow.md  test_plan.md
examples/: README.md  region_map.example.json
examples/cse/: example_cse_summary.json  manifest.json  summary.json
examples/cse/vertex_maps/: adult_clothed_full_body.vertex_map.npz  adult_clothed_half_body.vertex_map.npz  adult_female_sportswear_full_body.vertex_map.npz  adult_female_sportswear_half_body.vertex_map.npz  adult_male_shirtless_full_body.vertex_map.npz  adult_male_shirtless_half_body.vertex_map.npz
scripts/: collect_cse_examples.py  make_examples_manifest.py  validate_demo.sh
src/smpl_vertex_region_selector/: __init__.py  demo_assets.py  demo_data.py  export_for_surface_body_preannotation.py  fetch_public_examples.py  install_local_assets.py  prepare_assets.py  preview_overlay.py  project_alignment_to_mesh.py  region_io.py  schema.py
src/smpl_vertex_region_selector/alignment/: __init__.py  assets.py  builder.py  renderer.py  smpl_assets.py
src/smpl_vertex_region_selector/app/: __init__.py  main.py  main_window.py
src/smpl_vertex_region_selector/exports/: __init__.py  region_export.py
src/smpl_vertex_region_selector/geometry/: __init__.py  mesh_loader.py  vertex_table.py
src/smpl_vertex_region_selector/selection/: __init__.py  region_state.py  vertex_id_io.py
src/smpl_vertex_region_selector/viewer/: __init__.py  open3d_tools.py  point_cloud_canvas.py  tri_view_panel.py
tests/: test_alignment_builder.py  test_demo_assets.py  test_docs_links.py  test_examples.py  test_gui_smoke.py  test_install_local_assets.py  test_mesh_loader.py  test_privacy_guard.py  test_project_alignment_to_mesh.py  test_region_io.py  test_region_state_export.py  test_renderer_reference.py  test_vertex_id_io.py  test_vertex_table.py
