[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smpl-vertex-region-selector"
version = "0.1.0"
description = "Visualize DensePose CSE vertex maps, inspect SMPL/smpl_27554 vertex IDs, and export body region maps."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "smpl_vertex_region_selector contributors"}
]
keywords = [
  "densepose",
  "densepose-cse",
  "smpl",
  "smpl-27554",
  "vertex-map",
  "human-mesh",
  "computer-vision",
  "annotation-tool"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
  "numpy>=1.23",
  "pillow>=9.5"
]

[project.urls]
Homepage = "https://github.com/ruikunl/smpl_vertex_region_selector"
Repository = "https://github.com/ruikunl/smpl_vertex_region_selector"
Documentation = "https://github.com/ruikunl/smpl_vertex_region_selector#readme"
Issues = "https://github.com/ruikunl/smpl_vertex_region_selector/issues"

[project.optional-dependencies]
alignment = [
  "scipy>=1.10"
]
gui = [
  "PySide6>=6.5",
  "open3d>=0.18",
  "scipy>=1.10",
  "trimesh>=4.0"
]
dev = [
  "pytest>=7.0"
]
all = [
  "PySide6>=6.5",
  "open3d>=0.18",
  "scipy>=1.10",
  "trimesh>=4.0",
  "pytest>=7.0"
]

[project.scripts]
smpl-prepare-assets = "smpl_vertex_region_selector.prepare_assets:main"
smpl-preview-overlay = "smpl_vertex_region_selector.preview_overlay:main"
smpl-region-selector = "smpl_vertex_region_selector.app.main:main"
smpl-export-surface-preannotation = "smpl_vertex_region_selector.export_for_surface_body_preannotation:main"
smpl-fetch-public-examples = "smpl_vertex_region_selector.fetch_public_examples:main"
smpl-make-demo-data = "smpl_vertex_region_selector.demo_data:main"
smpl-install-local-assets = "smpl_vertex_region_selector.install_local_assets:main"
smpl-build-alignment = "smpl_vertex_region_selector.alignment.builder:main"

[tool.setuptools.packages.find]
where = ["src"]
